// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ADF => WikiMarkup - Panel should convert heading inside panel node 1`] = `
"{panel:bgColor=#fffae6}
h1. This is a warning panel
{panel}"
`;

exports[`ADF => WikiMarkup - Panel should convert info panel node 1`] = `
"{panel:bgColor=#deebff}
This is a info panel
{panel}"
`;

exports[`ADF => WikiMarkup - Panel should convert list inside panel node 1`] = `
"{panel:bgColor=#fffae6}
* item 1
* item 2
{panel}"
`;

exports[`ADF => WikiMarkup - Panel should convert mixed content panel node 1`] = `
"{panel:bgColor=#fffae6}
h1. This is a list

* item 1
* item 2

that is all
{panel}"
`;

exports[`ADF => WikiMarkup - Panel should convert note panel node 1`] = `
"{panel:bgColor=#eae6ff}
This is a note panel
{panel}"
`;

exports[`ADF => WikiMarkup - Panel should convert tip panel node 1`] = `
"{panel:bgColor=#e3fcef}
This is a tip panel
{panel}"
`;

exports[`ADF => WikiMarkup - Panel should convert warning panel node 1`] = `
"{panel:bgColor=#fffae6}
This is a warning panel
{panel}"
`;
